[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-commander"
version = "1.0.0"
description = "SRE Incident Response simulator for Meta x SST Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
]
