[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-commander"
version = "0.1.0"
description = "SRE simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "openenv-core>=0.1.0"
]

[project.scripts]
server = "main:app"[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-commander"
version = "0.1.0"
description = "SRE simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "openenv-core>=0.1.0"
]


[project.scripts]
server = "server.app:main"
